--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,9 +1,9 @@
 clear;                                                          // Clear all console output
 echo "Loading";                                                 // Echo sends text to console (NOT game chat).
-echo "Fin#1337's CSGO Config 4.1.0";
+echo "Fin#1337's CSGO Config 4.1.1+rc1";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: May 19th 2022";
+echo "Last edited: May 23rd 2022";
 echo "";
 echo "";
 echo "";
@@ -32,7 +32,7 @@ echo "";
 echo "[0.0] Initializing";
 sv_contact "csgocfg@fin.fail";                                  // Contact email for server sysop (please change this)
 exec "fixed_controller.360.cfg";                                // Turns on controller support
-hostname "Fin's CSGO Config 4.1.0 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
+hostname "Fin's CSGO Config 4.1.1+rc1 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
 sv_steamgroup "42297947";                                       // Group ID that your servers associate with (by default this is https://steamcommunity.com/groups/advancedcfg)
 cl_clanid "42297947";
 
@@ -199,8 +199,8 @@ alias "righthand" "cl_righthand 1; alias handswap lefthand";    // handed viewmo
 
 
 echo "[3.3.6] Setting up (patched?) better bomb finder alias";
-alias "+defuse" "+use; gameinstructor_enable 1; cl_autohelp 1; cl_showhelp 1";                                  // [Patched?] Uses the game instructor to find the bomb
-alias "-defuse" "-use; gameinstructor_enable 0; cl_autohelp 1; cl_showhelp 0";                                  // [Patched?] thru smokes with a "defuse the bomb" icon
+alias "+defuse" "+use;";                                  // [Patched?] Uses the game instructor to find the bomb
+alias "-defuse" "-use;";                                  // [Patched?] thru smokes with a "defuse the bomb" icon
 
 
 echo "[3.3.7] Setting up hold-for-knife alias";
@@ -431,6 +431,18 @@ echo "[3.3.20] Lag switch";
 alias "lagswitch"    "lagswitchon";
 alias "lagswitchon"  "fps_max    5;  alias lagswitch lagswitchoff";
 alias "lagswitchon"  "fps_max 1000;  alias lagswitch lagswitchon";
+
+echo "[3.3.21] Jump Throw";
+alias "+jthrow" "+jump; -attack; -attack2";
+alias "-jthrow" "-jump";
+//
+// Work In Progress no need to left click version below
+//alias "+jthrow" "+attack";
+//alias "-jthrow" "+jump; -attack; -jump";
+
+echo "[3.3.22] Smart buy binds";
+alias "rifle"  "buy vest; buy m4a1_silencer; buy defuser; buy vesthelm";
+alias "sniper" "buy vest; buy awp;  buy vesthelm; buy defuser";
 //
 //
 // echo "[3.3.21] Setting up RGB Hud";
@@ -570,7 +582,7 @@ bind "KP_MINUS"       "condump; exec autoexec.cfg;                      ; keycon
 echo "[7.2] Setting up binds for keyboard row 3";
 bind "TAB"            "+scorenet;                                       ; keycontainer";                        // This is the tab key
 bind "Q"              "                                                 ; keycontainer";                        // This is the q key
-bind "W"              "nadecrosshairon;use weapon_molotov;use weapon_incgrenade;        ; keycontainer";         // This is the w key
+bind "W"              "nadecrosshairon;use weapon_molotov;use weapon_incgrenade;        ; keycontainer";        // This is the w key
 bind "E"              "+ncmforward;                                     ; keycontainer";                        // This is the e key
 bind "R"              "+defuse;                                         ; keycontainer";                        // This is the r key
 bind "T"              "+reload; r_cleardecals;                          ; keycontainer";                        // This is the t key
@@ -593,7 +605,7 @@ bind "KP_PLUS"        "                                                 ; keycon
 
 echo "[7.3] Setting up binds for keyboard row 4";
 bind "CAPSLOCK"       "                                                 ; keycontainer";                        // This is the caps lock key
-bind "A"              "                                                 ; keycontainer";                        // This is the a key
+bind "A"              "+jthrow;                                         ; keycontainer";                        // This is the a key
 bind "S"              "+ncmleft;                                        ; keycontainer";                        // This is the s key
 bind "D"              "+ncmbackward;                                    ; keycontainer";                        // This is the d key
 bind "F"              "+ncmright;                                       ; keycontainer";                        // This is the f key
@@ -613,10 +625,10 @@ bind "KP_RIGHTARROW"  "                                                 ; keycon
 
 echo "[7.4] Setting up binds for keyboard row 5";
 bind "SHIFT"          "+loudshift;                                      ; keycontainer";                        // This is the left shift key
-bind "Z"              "                                                 ; keycontainer";                        // This is the z key
-bind "X"              "nadecrosshairon;use weapon_flashbang;             ; keycontainer";                        // This is the x key
+bind "Z"              "noclip                                           ; keycontainer";                        // This is the z key
+bind "X"              "nadecrosshairon; use weapon_flashbang;           ; keycontainer";                        // This is the x key
 bind "C"              "handswap;                                        ; keycontainer";                        // This is the c key
-bind "V"              "nadecrosshairon;use weapon_smokegrenade;          ; keycontainer";                        // No keycontainer = works in the menu  // This is the v key
+bind "V"              "nadecrosshairon; use weapon_smokegrenade;        ; keycontainer";                        // No keycontainer = works in the menu  // This is the v key
 bind "B"              "+voicerecord";                                                                           // This is the b key
 bind "N"              "buymenu;                                         ; keycontainer";                        // This is the n key
 bind "M"              "radio2;                                          ; keycontainer";                        // This is the m key
@@ -634,7 +646,7 @@ bind "KP_ENTER"       "butt;                                            ; keycon
 echo "[7.5] Setting up binds for keyboard row 6";
 bind "CTRL"           "+duck;                                           ; keycontainer";                        // This is the left control key
 bind "LWIN"           "                                                 ; keycontainer";                        // This is the windows (os) key to the left of the spacebar
-bind "ALT"            "noclip                                           ; keycontainer";                        // This is the left alt key
+bind "ALT"            "                                                 ; keycontainer";                        // This is the left alt key
 bind "SPACE"          "+cjump;                                          ; keycontainer";                        // This is the spacebar key
 bind "RALT"           "                                                 ; keycontainer";                        // This is the right alt key
 bind "RWIN"           "                                                 ; keycontainer";                        // This is the windows (os) key to the right of the spacebar
@@ -650,10 +662,10 @@ bind "KP_DEL"         "ahegao;                                          ; keycon
 
 echo "[7.6] Setting up binds for the mouse";
 bind "MOUSE1"         "+attack;                                         ; keycontainer";                        // This is the left click button
-bind "MOUSE2"         "+attack2;r_cleardecals                           ; keycontainer";                        // This is the right click button
-bind "MOUSE3"         "player_ping;ping;cast_ray;                       ; keycontainer";                        // This is the mouse wheel click button
-bind "MOUSE4"         "buy vesthelm; buy vest; buy ak47; buy defuser;   ; keycontainer";                        // This is one of the side mouse buttons
-bind "MOUSE5"         "buy vesthelm; buy vest; buy awp;  buy defuser;   ; keycontainer";                        // This is one of the side mouse buttons
+bind "MOUSE2"         "+attack2; r_cleardecals                          ; keycontainer";                        // This is the right click button
+bind "MOUSE3"         "player_ping; ping; cast_ray;                     ; keycontainer";                        // This is the mouse wheel click button
+bind "MOUSE4"         "rifle;                                           ; keycontainer";                        // This is one of the side mouse buttons
+bind "MOUSE5"         "sniper;                                          ; keycontainer";                        // This is one of the side mouse buttons
 bind "MWHEELUP"       "+jump";                                                                                  // This is scrolling the mouse wheel up
 bind "MWHEELDOWN"     "+jump";                                                                                  // This is scrolling the mouse wheel down
 
@@ -677,7 +689,7 @@ bind "UP"	            "mute;                                            ; keycon
 bind "DOWN"	          "drop;                                            ; keycontainer";                        // This is down  on the D-Pad on Xbox Controllers
 bind "LEFT"	          "invnext;                                         ; keycontainer";                        // This is left  on the D-Pad on Xbox Controllers
 bind "RIGHT"	        "invprev;                                         ; keycontainer";                        // This is right on the D-Pad on Xbox Controllers
-// Make sure to remove`unbindalljoystick from [11.0] if you want to use a controller.
+// Make sure to remove unbindalljoystick from [11.0] if you want to use a controller.
 
 
 echo "[8.0] Adjusting the HUD";
@@ -861,10 +873,10 @@ echo "";
 echo "";
 echo "";
 echo "Loaded";
-echo "Fin#1337's CSGO Config 4.1.0";
+echo "Fin#1337's CSGO Config 4.1.1";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: May 19th 2022";
+echo "Last edited: May 23rd 2022";
 echo "";
 echo "";
 echo "";
