--- a/aliases/aliases.cfg
+++ b/aliases/aliases.cfg
@@ -1,6 +1,8 @@
 echo "";
 echo "+---------------+---------------------------------+";
 echo "| aliases.cfg   | Lists charts of other aliases   |";
+echo "| fpsbugfix.cfg | Fixes the server-wide fps bug   |";
+echo "| gamemodes.cfg | Lists all gamemode convars      |";
 echo "| items.cfg     | Lists aliases to spawn items    |";
 echo "| keys.cfg      | Lists aliases for listing keys  |";
 echo "| positions.cfg | Lists aliases for map setpos-es |";
