--- a/aliases/items.cfg
+++ b/aliases/items.cfg
@@ -1,40 +1,40 @@
 echo "";
 echo "+---------------+----------------------------------+";
-echo "| axe           | Danger Zone Axe/Hatchet          |";
-echo "| bayonet       | Non-M9 Bayonet Knife             |";
-echo "| bowie         | Bowie Knife                      |";
-echo "| breachcharge  | Danger Zone Breach Charges       |";
-echo "| bumpmine      | Danger Zone Bump Mines           |";
-echo "| butterfly     | Butterfly Knife                  |";
-echo "| c4            | C4 Explosive (Defuse mode bomb)  |";
-echo "| classic       | Classic Knife                    |";
-echo "| ctknife       | Default Counter Terrorist Knife  |";
-echo "| exo           | Exo Knife                        |";
-echo "| falchion      | Falchion Knife                   |";
-echo "| fists         | Danger Zone Fists                |";
-echo "| flip          | Flip Knife                       |";
-echo "| gold          | Golden Knife (From Arms Race)    |";
-echo "| gut           | Gut Knife                        |";
-echo "| hammer        | Hammer                           |";
-echo "| healthshot    | Medi-Shots                       |";
-echo "| huntsman      | Huntsman Knife                   |";
-echo "| karambit      | Karambit Knife                   |";
-echo "| m9bayonet     | M9 Bayonet Knife                 |";
-echo "| navaja        | Navaja Knife                     |";
-echo "| nomad         | Nomad Knife                      |";
-echo "| paracord      | Paracord Knife                   |";
-echo "| riotshield    | Riot Shield/Tactical Shield      |";
-echo "| shadowdaggers | Shadow Daggers Knives            |";
-echo "| skeleton      | Skeleton Knife                   |";
-echo "| spectral      | Spectral (Halloween Ghost) Knife |";
-echo "| stiletto      | Stiletto Knife                   |";
-echo "| survival      | Survival Knife                   |";
-echo "| tablet        | Danger Zone Map Tablet           |";
-echo "| tagrenade     | Tactical Awareness (ESP) Grenade |";
-echo "| talon         | Talon Knife                      |";
-echo "| tknife        | Default Terrorist Knife          |";
-echo "| ursus         | Ursus Knife                      |";
-echo "| wrench        | Wrench/Spanner                   |";
-echo "| zeus          | Zeus x27                         |";
+echo "| fin_axe           | Danger Zone Axe/Hatchet          |";
+echo "| fin_bayonet       | Non-M9 Bayonet Knife             |";
+echo "| fin_bowie         | Bowie Knife                      |";
+echo "| fin_breachcharge  | Danger Zone Breach Charges       |";
+echo "| fin_bumpmine      | Danger Zone Bump Mines           |";
+echo "| fin_butterfly     | Butterfly Knife                  |";
+echo "| fin_c4            | C4 Explosive (Defuse mode bomb)  |";
+echo "| fin_classic       | Classic Knife                    |";
+echo "| fin_ctknife       | Default Counter Terrorist Knife  |";
+echo "| fin_exo           | Exo Knife                        |";
+echo "| fin_falchion      | Falchion Knife                   |";
+echo "| fin_fists         | Danger Zone Fists                |";
+echo "| fin_flip          | Flip Knife                       |";
+echo "| fin_gold          | Golden Knife (From Arms Race)    |";
+echo "| fin_gut           | Gut Knife                        |";
+echo "| fin_hammer        | Hammer                           |";
+echo "| fin_healthshot    | Medi-Shots                       |";
+echo "| fin_huntsman      | Huntsman Knife                   |";
+echo "| fin_karambit      | Karambit Knife                   |";
+echo "| fin_m9bayonet     | M9 Bayonet Knife                 |";
+echo "| fin_navaja        | Navaja Knife                     |";
+echo "| fin_nomad         | Nomad Knife                      |";
+echo "| fin_paracord      | Paracord Knife                   |";
+echo "| fin_riotshield    | Riot Shield/Tactical Shield      |";
+echo "| fin_shadowdaggers | Shadow Daggers Knives            |";
+echo "| fin_skeleton      | Skeleton Knife                   |";
+echo "| fin_spectral      | Spectral (Halloween Ghost) Knife |";
+echo "| fin_stiletto      | Stiletto Knife                   |";
+echo "| fin_survival      | Survival Knife                   |";
+echo "| fin_tablet        | Danger Zone Map Tablet           |";
+echo "| fin_tagrenade     | Tactical Awareness (ESP) Grenade |";
+echo "| fin_talon         | Talon Knife                      |";
+echo "| fin_tknife        | Default Terrorist Knife          |";
+echo "| fin_ursus         | Ursus Knife                      |";
+echo "| fin_wrench        | Wrench/Spanner                   |";
+echo "| fin_zeus          | Zeus x27                         |";
 echo "+---------------+----------------------------------+";
 echo "";
