--- a/practice.cfg
+++ b/practice.cfg
@@ -43,7 +43,8 @@ mp_match_end_restart "1";       // 0: A new map is loaded once the match is comp
 // Makes players respawn on death automatically (like in deathmatch)
 mp_respawn_on_death_ct "1";     // 0: Counter Terrorists don't respawn on death 1: Terrorists respawn on death
 mp_respawn_on_death_t "1";      // 0: Terrorists don't respawn on death 1: Terrorists respawn on death
-mp_respawnwavetime "0";
+mp_respawnwavetime_ct "0";      // Time between respawn waves for CTs.
+mp_respawnwavetime_t  "0";      // Time between respawn waves for Terrorists.
 
 // Makes ammo unlimited
 sv_infinite_ammo "1";           // 0: Shooting/throwing grenades consumes ammo 1: Makes bullets and grenades unlimited (no reloads necessary)
