--- a/config.cfg
+++ b/config.cfg
@@ -1,22 +1,22 @@
 cfgver "1"
 unbindall
-bind "0" "slot9; r_cleardecals;                            ; fin_keycontainer"
-bind "1" "                                                 ; fin_keycontainer"
-bind "2" "fin_nadechoff; slot1; r_cleardecals;             ; fin_keycontainer"
-bind "3" "fin_nadechoff; slot2; r_cleardecals;             ; fin_keycontainer"
-bind "4" "+fin_autoknifeinspect; fin_nadechoff; r_cleardecals                 ; fin_keycontainer"
-bind "5" "fin_nadechoff; slot4; r_cleardecals;             ; fin_keycontainer"
-bind "6" "fin_nadechoff; slot5; r_cleardecals;             ; fin_keycontainer"
-bind "7" "slot6; r_cleardecals;                            ; fin_keycontainer"
-bind "8" "slot7; r_cleardecals;                            ; fin_keycontainer"
-bind "9" "slot8; r_cleardecals;                            ; fin_keycontainer"
+bind "0" "fin_nadexhoff; slot9;  r_cleardecals;            ; fin_keycontainer"
+bind "1" "+fin_knife; fin_nadexhoff;                       ; fin_keycontainer"
+bind "2" "fin_nadexhoff;  slot3; slot2; slot1;  r_cleardecals;                ; fin_keycontainer"
+bind "3" "fin_nadexhoff;  slot3; slot1; slot2;  r_cleardecals;                ; fin_keycontainer"
+bind "4" "+fin_autoknifeinspect; fin_nadexhoff; r_cleardecals;                ; fin_keycontainer"
+bind "5" "fin_hegrenade;         r_cleardecals;            ; fin_keycontainer"
+bind "6" "fin_nadexhoff; slot5;  r_cleardecals;            ; fin_keycontainer"
+bind "7" "fin_hegrenade;         r_cleardecals;            ; fin_keycontainer"
+bind "8" "fin_nadexhoff; slot7;  r_cleardecals;            ; fin_keycontainer"
+bind "9" "fin_nadexhoff; slot8;  r_cleardecals;            ; fin_keycontainer"
 bind "a" "+fin_jthrow;                                     ; fin_keycontainer"
 bind "b" "+voicerecord"
 bind "c" "fin_handswap;                                    ; fin_keycontainer"
 bind "d" "+fin_ncmbackward;                                ; fin_keycontainer"
 bind "e" "+fin_ncmforward;                                 ; fin_keycontainer"
 bind "f" "+fin_ncmright;                                   ; fin_keycontainer"
-bind "g" "+inspect;                                        ; fin_keycontainer"
+bind "g" "+lookatweapon;                                   ; fin_keycontainer"
 bind "h" "drop;                                            ; fin_keycontainer"
 bind "i" "messagemode2"
 bind "j" "+fin_spin;                                       ; fin_keycontainer"
@@ -27,16 +27,16 @@ bind "n" "buymenu;                                         ; fin_keycontainer"
 bind "o" "                                                 ; fin_keycontainer"
 bind "p" "                                                 ; fin_keycontainer"
 bind "q" "                                                 ; fin_keycontainer"
-bind "r" "+fin_defuse;                                     ; fin_keycontainer"
+bind "r" "+fin_betteruse;                                  ; fin_keycontainer"
 bind "s" "+fin_ncmleft;                                    ; fin_keycontainer"
 bind "t" "+reload; r_cleardecals;                          ; fin_keycontainer"
 bind "u" "messagemode"
-bind "v" "fin_nadechon; use weapon_smokegrenade;           ; fin_keycontainer"
-bind "w" "fin_nadechon; use weapon_molotov; use weapon_incgrenade;            ; fin_keycontainer"
-bind "x" "fin_nadechon; use weapon_flashbang;              ; fin_keycontainer"
+bind "v" "fin_smoke;                                       ; fin_keycontainer"
+bind "w" "fin_molotov;                                     ; fin_keycontainer"
+bind "x" "fin_flashbang;                                   ; fin_keycontainer"
 bind "y" "+spray_menu; r_cleardecals;                      ; fin_keycontainer"
 bind "z" "noclip                                           ; fin_keycontainer"
-bind "KP_INS" "clearchat;                                       ; fin_keycontainer"
+bind "KP_INS" "fin_clearchat;                                   ; fin_keycontainer"
 bind "KP_END" "                                                 ; fin_keycontainer"
 bind "KP_DOWNARROW" "                                                 ; fin_keycontainer"
 bind "KP_PGDN" "                                                 ; fin_keycontainer"
@@ -61,13 +61,13 @@ bind "," "radio1;                                          ; fin_keycontainer"
 bind "." "radio3;                                          ; fin_keycontainer"
 bind "/" "buyammo2;                                        ; fin_keycontainer"
 bind "\" "                                                 ; fin_keycontainer"
-bind "-" "slot0; r_cleardecals;                            ; fin_keycontainer"
-bind "=" "slot11; r_cleardecals;                           ; fin_keycontainer"
+bind "-" "fin_nadexhoff; slot0;  r_cleardecals;            ; fin_keycontainer"
+bind "=" "fin_nadexhoff; slot11; r_cleardecals;            ; fin_keycontainer"
 bind "ENTER" "                                                 ; fin_keycontainer"
 bind "SPACE" "+fin_cjump;                                      ; fin_keycontainer"
-bind "BACKSPACE" "slot12; r_cleardecals;                           ; fin_keycontainer"
+bind "BACKSPACE" "fin_nadexhoff; decoy;  r_cleardecals;            ; fin_keycontainer"
 bind "TAB" "+fin_scorenet;                                   ; fin_keycontainer"
-bind "CAPSLOCK" "                                                 ; fin_keycontainer"
+bind "CAPSLOCK" "toggle r_drawclipbrushes 0 2;                    ; fin_keycontainer"
 bind "NUMLOCK" "                                                 ; fin_keycontainer"
 bind "ESCAPE" "cancelselect"
 bind "SCROLLLOCK" "                                                 ; fin_keycontainer"
@@ -81,8 +81,8 @@ bind "SHIFT" "+fin_loudshift;                                  ; fin_keycontaine
 bind "RSHIFT" "; +fin_loudshift                                 ; fin_keycontainer"
 bind "ALT" "                                                 ; fin_keycontainer"
 bind "RALT" "                                                 ; fin_keycontainer"
-bind "CTRL" "+duck;                                           ; fin_keycontainer"
-bind "RCTRL" "toggle_duck;                                     ; fin_keycontainer"
+bind "CTRL" "+fin_crouch;                                     ; fin_keycontainer"
+bind "RCTRL" ";+fin_crouch;                                    ; fin_keycontainer"
 bind "LWIN" "                                                 ; fin_keycontainer"
 bind "RWIN" "                                                 ; fin_keycontainer"
 bind "UPARROW" "                                                 ; fin_keycontainer"
@@ -102,7 +102,7 @@ bind "F10" "quit_prompt;                                     ; fin_keycontainer"
 bind "F11" "                                                 ; fin_keycontainer"
 bind "F12" "                                                 ; fin_keycontainer"
 bind "NUMLOCKTOGGLE" "                                                 ; fin_keycontainer"
-bind "MOUSE1" "+attack;                                         ; fin_keycontainer"
+bind "MOUSE1" "+noscroll_attack;                                ; fin_keycontainer"
 bind "MOUSE2" "+attack2; r_cleardecals                          ; fin_keycontainer"
 bind "MOUSE3" "player_ping; ping; cast_ray;                     ; fin_keycontainer"
 bind "MOUSE4" "fin_rifle;                                       ; fin_keycontainer"
@@ -126,6 +126,7 @@ aim_gyro_acceleration "1"
 aim_gyro_base_sensitivity "2.5"
 aim_gyro_circular_deadzone "0.0"
 aim_gyro_conversion_mode "0"
+aim_gyro_enable_mode "0"
 aim_gyro_high_sense_multiplier "2.0"
 aim_gyro_high_sense_speed "360.0"
 aim_gyro_invert_pitch "1"
@@ -195,8 +196,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1653924364"
-cachedvalue_count_teammates "1653924626"
+cachedvalue_count_partybrowser "1654215945"
+cachedvalue_count_teammates "1654353685"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -269,9 +270,9 @@ cl_grass_mip_bias "-0.5"
 cl_hide_avatar_images "2"
 cl_hud_background_alpha "0.1"
 cl_hud_bomb_under_radar "1"
-cl_hud_color "-1"
+cl_hud_color "2"
 cl_hud_healthammo_style "1"
-cl_hud_playercount_pos "0"
+cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "1"
 cl_hud_radar_scale "1.300000"
 cl_idealpitchscale "0.8"
@@ -360,15 +361,15 @@ commentary_firstrun "0"
 con_allownotify "1"
 con_enable "1"
 crosshair "1"
-demo_index "0"
-demo_index_max_other "500"
+demo_index "1"
+demo_index_max_other "2000"
 dsp_enhance_stereo "1"
 engine_no_focus_sleep "0"
 force_audio_english "0"
 func_break_max_pieces "0"
 g15_update_msec "250"
 gameinstructor_enable "0"
-hud_scaling "0.60967"
+hud_scaling "0.5"
 hud_showtargetid "1"
 hud_takesshots "0"
 joy_accelmax "1.0"
@@ -460,6 +461,7 @@ move_stick_circular_deadzone_min "0.17"
 move_stick_response_curve "2.0"
 move_stick_square_deadzone_forward "0.0"
 move_stick_square_deadzone_strafe "0.0"
+move_stick_walk_zone "0.65"
 move_touchpad_circular_deadzone_min "0.1"
 move_touchpad_sensitivity_forward "1.0"
 move_touchpad_sensitivity_strafe "1.0"
@@ -493,7 +495,7 @@ player_competitive_maplist_2v2_10_0_F88E9A71 "mg_de_hive,mg_de_cbble,mg_de_train
 player_competitive_maplist_8_10_0_A1BE4499 "mg_de_mirage"
 player_nevershow_communityservermessage "1"
 player_survival_list_10_0_303 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_vineyard,mg_dz_ember"
-player_teamplayedlast "2"
+player_teamplayedlast "3"
 player_wargames_list2_10_0_E04 "mg_skirmish_flyingscoutsman"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
@@ -529,7 +531,7 @@ snd_mapobjective_volume "0.006"
 snd_menumusic_volume "0.06"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
-snd_mixahead "0.004"
+snd_mixahead "0.0032766439253464310"
 snd_music_selection "1"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.1"
@@ -546,11 +548,11 @@ spec_replay_autostart "0"
 spec_show_xray "1"
 spec_usenumberkeys_nobinds "1"
 ss_splitmode "0"
-steaminput_default_glyphstyle "1"
-steaminput_default_neutral "1"
-steaminput_default_solid "1"
 steaminput_firsttimepopup "1"
 steaminput_glyph_display_mode "0"
+steaminput_glyph_neutral "1"
+steaminput_glyph_solid "1"
+steaminput_glyph_style "1"
 store_version "1"
 suitvolume "0.25"
 sv_forcepreload "1"
@@ -569,7 +571,7 @@ sv_specnoclip "1"
 sv_specspeed "3"
 sv_unlockedchapters "1"
 sv_voiceenable "1"
-test_convar "0.000000"
+test_convar "6.500000"
 texture_budget_background_alpha "128"
 texture_budget_panel_bottom_of_history_fraction ".25"
 texture_budget_panel_height "284"
@@ -607,7 +609,7 @@ ui_playsettings_flags_official_scrimcomp2v2 "0"
 ui_playsettings_flags_official_skirmish "0"
 ui_playsettings_flags_official_survival "0"
 ui_playsettings_maps_listen_casual "mg_de_mirage"
-ui_playsettings_maps_listen_competitive "mg_de_mirage"
+ui_playsettings_maps_listen_competitive "mg_de_nuke"
 ui_playsettings_maps_listen_deathmatch "mg_de_mirage"
 ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_inferno"
 ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
