--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,9 +1,9 @@
 clear;                                                          // Clear all console output
 echo "Loading";                                                 // Echo sends text to console (NOT game chat).
-echo "Fin#1337's CSGO Config 4.1.3";
+echo "Fin#1337's CSGO Config 4.1.4";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: June 4th 2022";
+echo "Last edited: August 9th 2022";
 echo "";
 echo "";
 echo "";
@@ -29,10 +29,10 @@ echo "";
 
 
 echo "[0.0] Initializing";
-alias "fin_version" "echo 4.1.3";                               // Sets version number to an alias (can be output with: "alias fin_version")
+alias "fin_version" "echo 4.1.4";                               // Sets version number to an alias (can be output with: "alias fin_version")
 sv_contact "csgocfg@fin.fail";                                  // Contact email for server sysop (please change this)
 exec "./fixed_controller.360.cfg";                              // Turns on controller support
-hostname "Fin's CSGO Config 4.1.3 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
+hostname "Fin's CSGO Config 4.1.4 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
 sv_steamgroup "42297947";                                       // Group ID that your servers associate with (by default this is https://steamcommunity.com/groups/advancedcfg)
 cl_clanid "42297947";                                           // Current clan ID for name decoration
 
@@ -669,15 +669,15 @@ bind "KP_MINUS"       "condump; exec ./autoexec.cfg;                    ; fin_ke
 echo "[7.2] Setting up binds for keyboard row 3";
 bind "TAB"            "+fin_scorenet;                                   ; fin_keycontainer";                    // This is the tab key
 bind "Q"              "                                                 ; fin_keycontainer";                    // This is the q key
-bind "W"              "fin_molotov;                                     ; fin_keycontainer";                    // This is the w key
-bind "E"              "+fin_ncmforward;                                 ; fin_keycontainer";                    // This is the e key
-bind "R"              "+fin_betteruse;                                  ; fin_keycontainer";                    // This is the r key
-bind "T"              "+reload; r_cleardecals;                          ; fin_keycontainer";                    // This is the t key
-bind "Y"              "+spray_menu; r_cleardecals;                      ; fin_keycontainer";                    // This is the y key
-bind "U"              "messagemode";                                                                            // This is the u key
-bind "I"              "messagemode2";                                                                           // This is the i key
-bind "O"              "                                                 ; fin_keycontainer";                    // This is the o key
-bind "P"              "                                                 ; fin_keycontainer";                    // This is the p key
+bind "D"              "fin_molotov;                                     ; fin_keycontainer";                    // This is the w key
+bind "R"              "+fin_ncmforward;                                 ; fin_keycontainer";                    // This is the e key
+bind "W"              "+fin_betteruse;                                  ; fin_keycontainer";                    // This is the r key
+bind "B"              "+reload; r_cleardecals;                          ; fin_keycontainer";                    // This is the t key
+bind "J"              "+spray_menu; r_cleardecals;                      ; fin_keycontainer";                    // This is the y key
+bind "F"              "messagemode";                                                                            // This is the u key
+bind "U"              "messagemode2";                                                                           // This is the i key
+bind "P"              "                                                 ; fin_keycontainer";                    // This is the o key
+bind "SEMICOLON"      "                                                 ; fin_keycontainer";                    // This is the p key
 bind "["              "                                                 ; fin_keycontainer";                    // This is the [ key
 bind "]"              "                                                 ; fin_keycontainer";                    // This is the ] key
 bind  \               "                                                 ; fin_keycontainer";                    // This is the backslash key. Quotes are missing due to formatting issues with backslashes.
@@ -694,14 +694,14 @@ echo "[7.3] Setting up binds for keyboard row 4";
 bind "CAPSLOCK"       "toggle r_drawclipbrushes 0 2;                    ; fin_keycontainer";                    // This is the caps lock key
 bind "A"              "+fin_jthrow;                                     ; fin_keycontainer";                    // This is the a key
 bind "S"              "+fin_ncmleft;                                    ; fin_keycontainer";                    // This is the s key
-bind "D"              "+fin_ncmbackward;                                ; fin_keycontainer";                    // This is the d key
-bind "F"              "+fin_ncmright;                                   ; fin_keycontainer";                    // This is the f key
+bind "H"              "+fin_ncmbackward;                                ; fin_keycontainer";                    // This is the d key
+bind "T"              "+fin_ncmright;                                   ; fin_keycontainer";                    // This is the f key
 bind "G"              "+lookatweapon;                                   ; fin_keycontainer";                    // This is the g key
-bind "H"              "drop;                                            ; fin_keycontainer";                    // This is the h key
-bind "J"              "+fin_spin;                                       ; fin_keycontainer";                    // This is the j key
-bind "K"              "                                                 ; fin_keycontainer";                    // This is the k key
-bind "L"              "                                                 ; fin_keycontainer";                    // This is the l key
-bind "SEMICOLON"      "disconnect;                                      ; fin_keycontainer";                    // This is the ; key
+bind "Y"              "drop;                                            ; fin_keycontainer";                    // This is the h key
+bind "N"              "+fin_spin;                                       ; fin_keycontainer";                    // This is the j key
+bind "E"              "                                                 ; fin_keycontainer";                    // This is the k key
+bind "O"              "                                                 ; fin_keycontainer";                    // This is the l key
+bind "I"              "disconnect;                                      ; fin_keycontainer";                    // This is the ; key
 bind "'"              "                                                 ; fin_keycontainer";                    // This is the apostrophe key
 bind "ENTER"          "                                                 ; fin_keycontainer";                    // This is the return key
 bind "KP_LEFTARROW"   "                                                 ; fin_keycontainer";                    // This is the Numpad 4 key
@@ -714,11 +714,11 @@ echo "[7.4] Setting up binds for keyboard row 5";
 bind "SHIFT"          "+fin_loudshift;                                  ; fin_keycontainer";                    // This is the left shift key
 bind "Z"              "noclip                                           ; fin_keycontainer";                    // This is the z key
 bind "X"              "fin_flashbang;                                   ; fin_keycontainer";                    // This is the x key
-bind "C"              "fin_handswap;                                    ; fin_keycontainer";                    // This is the c key
-bind "V"              "fin_smoke;                                       ; fin_keycontainer";                    // This is the v key
-bind "B"              "+voicerecord";                                   // No keycontainer = works in the menu  // This is the b key
-bind "N"              "buymenu;                                         ; fin_keycontainer";                    // This is the n key
-bind "M"              "radio2;                                          ; fin_keycontainer";                    // This is the m key
+bind "M"              "fin_handswap;                                    ; fin_keycontainer";                    // This is the c key
+bind "C"              "fin_smoke;                                       ; fin_keycontainer";                    // This is the v key
+bind "V"              "+voicerecord";                                   // No keycontainer = works in the menu  // This is the b key
+bind "K"              "buymenu;                                         ; fin_keycontainer";                    // This is the n key
+bind "L"              "radio2;                                          ; fin_keycontainer";                    // This is the m key
 bind ","              "radio1;                                          ; fin_keycontainer";                    // This is the comma key
 bind "."              "radio3;                                          ; fin_keycontainer";                    // This is the period/full stop key
 bind "/"              "buyammo2;                                        ; fin_keycontainer";                    // This is the slash key
@@ -965,10 +965,10 @@ echo "";
 echo "";
 echo "";
 echo "Loaded";
-echo "Fin#1337's CSGO Config 4.1.3";
+echo "Fin#1337's CSGO Config 4.1.4";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: June 4th 2022";
+echo "Last edited: August 9th 2022";
 echo "";
 echo "";
 echo "";
